clickable legend items & text wrap fix

--- a/style.scss
+++ b/style.scss
@@ -41,14 +41,14 @@
       margin-bottom: 1rem;
       &__box {
         width: 424px;
-        min-height: 16px;
+        min-height: 144px;
         padding: 0;
         border: 0;
         text-wrap: wrap;
         background-color: rgba(216, 184, 110, 0.34);
         font-weight: 700;
         font-size: medium;
-        white-space: pre;
+        white-space: pre-wrap;
         resize: none;
 
         &:focus,
@@ -77,11 +77,19 @@
     margin-left: 8rem;
     margin-right: 8rem;
     &__item-box {
-      background-color: rgba(160, 160, 160, 0.192);
+      background-color: rgba(160, 160, 160, 0.2);
       min-width: 40px;
       font-weight: 700;
+      &:hover {
+        background-color: rgba(160, 160, 160, 0.3);
+      }
     }
   }
+}
+
+#space {
+  display: flex;
+  align-items: center;
 }
 
 #legendHeader {
